feat: improving entry style

--- a/swapi/src/css/app.css
+++ b/swapi/src/css/app.css
@@ -1,6 +1,14 @@
 /* app global css */
-@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");
 
 body {
-  font-family: 'Figtree', sans-serif !important;
+  font-family: "Figtree", sans-serif !important;
+}
+
+.bg-image {
+  background-image: url('../assets/images/star.gif');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  filter: sepia(1);
 }
