--- a/swapi/src/css/app.css
+++ b/swapi/src/css/app.css
@@ -1,5 +1,6 @@
 /* app global css */
 @import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Mrs+Sheppards&display=swap');
 
 body {
   font-family: "Figtree", sans-serif !important;
@@ -17,4 +18,9 @@ body {
 
 .active-link-class {
   background-color: #f5f5f517 !important;
+}
+
+.star-wars {
+  font-family: "Mrs Sheppards", cursive;
+  font-style: normal;
 }
